<resources>
    <string name="app_name">Allergico</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_eanreader">EANReaderActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_product_overview">Produktübersicht</string>
    <string name="title_activity_show_allergen">Allergenübersicht</string>
    <string name="title_activity_show_product">ShowProductActivity</string>
    <string name="title_activity_administrate_product">AdministrateProductActivity</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="title_activity_loading_screen">Allergico</string>
    <string name="title_activity_allergen_list">AllergenListActivity</string>


    <!-- Product Text Views Default Values Start -->
        <string name="DefaultProductName">Product Name</string>
        <string name="DefaultProductDescription">Product Description</string>
    <!-- Product Text Views Default Values End -->

    <!-- Buttons Start -->
        <string name="NextButtonText">Next</string>
        <string name="BackButtonText">Back</string>
    <!-- Buttons End -->

    <!-- Text Views Start -->
        <string name="TextViewMultipleLineNumberStandard">10</string>
    <!-- Text Views End -->
    <!--EditText Tooltipps Start-->
    <string name="ProductSearchEditText">Produktsuche</string>
    <!--EditText Tooltipps End-->

    <!-- Add Product Activity Start -->
        <string name="PhotoRadioText">Set photo</string>
        <string name="NoPhotoRadioText">No photo</string>
        <string name="TakePhotoButtonText">Take Photo</string>
    <string name="title_activity_show_allergen_detail">ShowAllergenDetail</string>
    <string name="title_activity_administrate_allergen">AdministrateAllergenActivity</string>
    <!-- Add Product Activity End -->


</resources>
