<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="at.allergico.allergico.activities.AddProductActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addProductName"
            android:hint="@string/DefaultProductName"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addProductDescription"
            android:hint="@string/DefaultProductDescription"
            android:lines="@integer/textAreaNumRowsDefault"
            android:gravity="bottom"
            android:layout_row="1"
            android:layout_column="0" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PhotoRadioText"
                    android:id="@+id/takePhotoRadio"
                    android:layout_weight=".5"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoPhotoRadioText"
                    android:id="@+id/noTakePhotoRadio"
                    android:layout_marginLeft="25dp"
                    android:layout_weight=".5" />
            </LinearLayout>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_row="3"
            android:layout_column="0" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addProductImage"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NextButtonText"
                android:id="@+id/nextButton"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    </GridLayout>
</RelativeLayout>
